RESOLVED FIXED289032
Address Safer more CPP failures in UIProcess/
https://bugs.webkit.org/show_bug.cgi?id=289032
Summary Address Safer more CPP failures in UIProcess/
Chris Dumez
Reported 2025-03-03 19:36:11 PST
Address Safer more CPP failures in UIProcess/.
Attachments
Chris Dumez
Comment 1 2025-03-03 19:37:41 PST
EWS
Comment 2 2025-03-04 18:59:25 PST
Committed 291605@main (bb658823cf9b): <https://commits.webkit.org/291605@main> Reviewed commits have been landed. Closing PR #41829 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-03-04 19:00:20 PST
Note You need to log in before you can comment on or make changes to this bug.